<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.viewModels.ShoeDetailViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@{shoeDetailViewModel.name}"
                android:autofillHints="@string/enter_your_email"
                android:hint="@string/enter_shoe_name"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/companyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/company_name" />

            <EditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@{shoeDetailViewModel.company}"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/enter_your_email"
                android:hint="@string/enter_company"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sizeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/sizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@{shoeDetailViewModel.size.toString()}"
                android:autofillHints="@string/enter_your_email"
                android:hint="@string/enter_shoe_size"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/shoe_description" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@{shoeDetailViewModel.desc}"
                android:autofillHints="@string/enter_your_email"
                android:hint="@string/enter_shoe_description"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>
</layout>